# CircuitOS

./: .gitignore  CMakeLists.txt  CircuitOS.ino  Drivers.hpp  Jenkinsfile  Makefile  OSTest.ino  README.md  Setup.hpp  library.properties
examples/ListMenu/: ListMenu.ino
examples/Motion/: Motion.ino
examples/Motion/src/: ICMU20948.cpp  ICMU20948.h
examples/Mutex/: Mutex.ino
examples/Queue/: Queue.ino
examples/RTC/: RTC.ino
examples/Settings/: Settings.h  Settings.ino
src/: CircuitOS.h
src/Audio/: ChirpSystem.cpp  ChirpSystem.h  Notes.hpp  Piezo.cpp  Piezo.h  Piezo.impl  PiezoDAC.impl  PiezoESP32.impl  PiezoPWM.impl  Piezo_I2S.impl
src/Bitmaps/: Bitmaps.h  Bitmaps.hpp
src/Buffer/: DataBuffer.cpp  DataBuffer.h  FSBuffer.cpp  FSBuffer.h  LazyDataBuffer.cpp  LazyDataBuffer.h  RingBuffer.cpp  RingBuffer.h
src/Devices/: AW9523.cpp  AW9523.h  ShiftOutput.cpp  ShiftOutput.h
src/Devices/LEDmatrix/: Animation.impl  LEDmatrix.cpp  LEDmatrix.h  LEDmatrix.impl  SerialFlashFileAdapter.h
src/Devices/Matrix/: Animation.cpp  Animation.h  Animation.impl  DelayedMatrixOutput.cpp  DelayedMatrixOutput.h  Font.hpp  IS31FL3731.cpp  IS31FL3731.h  Matrix.cpp  Matrix.h  MatrixAnim.cpp  MatrixAnim.h  MatrixAnimGIF.cpp  MatrixAnimGIF.h  MatrixAnimation.cpp  MatrixAnimation.h  MatrixOutput.cpp  MatrixOutput.h  MatrixOutputBuffer.cpp  MatrixOutputBuffer.h  MatrixPartOutput.cpp  MatrixPartOutput.h  MatrixPixel.cpp  MatrixPixel.h  ShiftMatrixOutput.cpp  ShiftMatrixOutput.h
src/Devices/Motion/: ICM20948.cpp  ICM20948.h  ICM20948.impl  MPU6050_CM.cpp  MPU6050_CM.h  MPU6050_CM.impl  img_dmp3a_icm20948.h  img_dmp3a_icm20948.hpp  img_dmp_mpu6050.hpp
src/Devices/SerialFlash/: SerialFlashFileAdapter.cpp  SerialFlashFileAdapter.impl
src/Display/: AnimatedSprite.cpp  AnimatedSprite.h  Color.cpp  Color.h  Display.cpp  Display.h  GIFAnimatedSprite.cpp  GIFAnimatedSprite.h  LovyanGFX_setup.h  PGMFile.cpp  PGMFile.h  Sprite.cpp  Sprite.h  gifdec.cpp  gifdec.h
src/Elements/: GridMenu.cpp  GridMenu.h  ListMenu.cpp  ListMenu.h  ModalBackground.hpp  SliderElement.cpp  SliderElement.h
src/FS/: CompressedFile.cpp  CompressedFile.h  PGMFile.cpp  PGMFile.h  RamFile.cpp  RamFile.h
src/Input/: I2cExpander.cpp  I2cExpander.h  Input.cpp  Input.h  InputGPIO.cpp  InputGPIO.h  InputI2C.cpp  InputI2C.h  InputListener.cpp  InputListener.h  InputShift.cpp  InputShift.h
src/Input/Keypad_I2Ca/: Keypad_I2Ca.cpp  Keypad_I2Ca.h  README.md
src/Loop/: LoopListener.cpp  LoopListener.h  LoopManager.cpp  LoopManager.h
src/Motion/: Fusion.hpp  ICM20948.cpp  ICM20948.h  MPU.cpp  MPU.h  MPU6050_CM.cpp  MPU6050_CM.h  MPU9250.cpp  MPU9250.h  MPUFusion.cpp  MPUFusion.h  img_dmp_mpu6050.h  vec.hpp
src/Network/: Net.cpp  Net.h  Net.impl  StreamableHTTPClient.cpp  StreamableHTTPClient.h
src/RTC/: RTC.cpp  RTC.h
src/Support/: Context.cpp  Context.h  ContextTransition.cpp  ContextTransition.h  LowRamContextTransition.impl  Modal.cpp  Modal.h  ModalTransition.cpp  ModalTransition.h  StandardContextTransition.impl
src/Sync/: BinarySemaphone.cpp  BinarySemaphore.cpp  BinarySemaphore.h  BinarySemaphore.impl  Mutex.cpp  Mutex.h  Queue.cpp  Queue.h  Semaphone.cpp  Semaphore.h  Semaphore.impl
src/UI/: BitmapElement.cpp  BitmapElement.h  CacheLayout.cpp  CacheLayout.h  CustomElement.cpp  CustomElement.h  Element.cpp  Element.h  ElementContainer.cpp  ElementContainer.h  GridLayout.cpp  GridLayout.h  Image.cpp  Image.h  LayeredLayout.cpp  LayeredLayout.h  Layout.cpp  Layout.h  LinearLayout.cpp  LinearLayout.h  LowRamScreen.impl  Screen.cpp  Screen.h  ScrollLayout.cpp  ScrollLayout.h  SpriteElement.cpp  SpriteElement.h  StandardScreen.impl  TextElement.cpp  TextElement.h
src/Update/: UpdateListener.cpp  UpdateListener.h  UpdateManager.cpp  UpdateManager.h
src/Util/: Debug.cpp  Debug.h  GIF.cpp  GIF.h  HWRevision.cpp  HWRevision.h  NullStream.cpp  NullStream.h  PinMap.h  Settings.cpp  Settings.h  SettingsLittleFS.impl  SettingsNVS.impl  Task.cpp  Task.h  Task.impl  Timer.cpp  Timer.h  Vector.h  WithListeners.h  gifdec.cpp  gifdec.h
